--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 {% extends '_base.html' %}
 
-{% block meta_title %}$WGMI NFT{% endblock %}
+{% block meta_title %}$WGMI Unruggables NFT Collection{% endblock %}
 
 {% block content %}
     <div class="hero">
         <div class="hero-text">
             <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3.</li>
+                <li>Art by Guille23</li>
+                <li>Supplies liquidity for $WGMI</li>
+                <li>Badge of honor for $WGMI OGs</li>
             </ul>
         </div>
         <div class="btn-container">
@@ -27,9 +27,9 @@
                 <form>
                     <div class="mint-quantity">
                         <div id="mint-quantity-value">1</div>
-                        <input type="range" min="1" max="10" value="1" name="mint-quantity-input" id="mint-quantity-input">
+                        <input type="range" min="1" max="3" value="1" name="mint-quantity-input" id="mint-quantity-input">
                     </div>
-                    <div class="mint-help">Max 10 per address. 0.06 ETH per mint.</div>
+                    <div class="mint-help">Max 3 per address. 0.06 ETH per mint. 0.03 ETH per mint for whitelisters!</div>
                 </form>
             </div>
         </div>
@@ -37,52 +37,65 @@
     <div class="content">
         <div class="row">
             <div class="lead">
-                <h1>What is $WGMI?</h1>
+                <h1>Meet the Unruggables</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
+                    The Unruggables is the first NFT collection made by the $WGMI (ERC-20) community.
                     <br>
                     <br>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    The collection consists of 888 unique Unruggable pheonixes, which represent how we, as a community, rose from the ashes after the token was initially rugged by its creator.
+                    <br>
+                    <br>
+                    All royalties from secondary sales of NFTs in this collection will be directed towards supplying liquidity for the $WGMI token, via purchasing ETH/WGMI LP tokens and locking that liquidity away forever by burning those LP tokens.
                 </p>
             </div>
 
             <div id="cycler">
-                <img src="images/slides.png">
+                <img src="images/preview.gif">
             </div>
         </div>
 
         <div class="row main-text">
             <div>
-                <h1>Something</h1>
+                <h1>Collection Details</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
+                    The number 888 is sacred to the <a href="https://www.wgmi-takeover.com/">$WGMI community</a>. This collection was conceived 
+                    and created when the community takeover was still very young, so the creator and community decided to use this special number
+                    and keep supply low.
                     <br>
                     <br>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Providing permanently locked-in liquidity will enable the community-lead $WGMI 
+                    to remain alive and healthy into the future.
                 </p>
             </div>
 
             <div>
-                <h1>More Content</h1>
+                <h1>Proceeds</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
+                    All proceeds from initial sales and royalties from secondary sales 
+                    will be use to supply liquidity to the 
+                    uniswap $WGMI-Eth trading pair. Uniswap gives the liquidity provider 
+                    trading pair liquidity tokens, which can be used later by the provider to redeem
+                    the depositied liquidity. The $WGMI community will burn these trading pair
+                    liquidity tokens so that the liquidity share is unretrievable forever.
                     <br>
                     <br>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur!
+                    As this share of the liquidity pool collects fees, a growing portion of the supply of
+                    $WGMI tokens will be locked into this unretrievable pool, making $WGMI effectively deflationary.
+                </p>
+            </div>
+
+            <div>
+                <h1>Mint Details</h1>
+                <p>
+                    Each mint costs .06 eth and minters are limited to 3 nfts per wallet.
+                    Liquidity pool providers' addresses will be added to a whitelist, and
+                    these minters will be able to mint for .03 eth per piece, limited to 3 nfts
+                    per wallet.
+                    <br>
+                    <br>
+                    The creators and not-devs behind this project will mint and set approximately 10
+                    nfts aside as rewards for those who contributed to this project, and as gifts for
+                    notable GMIs that have helped us move the needle in this movement.
                 </p>
             </div>
         </div>
