--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
 
         <div class="row main-text">
             <div>
-                <h1>Collection Details</h1>
+                <h1>Collection</h1>
                 <p>
                     The number 888 is sacred to the <a href="https://www.wgmi-takeover.com/">$WGMI community</a>. This collection was conceived 
                     and created when the community takeover was still very young, so the creator and community decided to use this special number
@@ -64,7 +64,7 @@
                     <br>
                     <br>
                     Providing permanently locked-in liquidity will enable the community-lead $WGMI 
-                    to remain alive and healthy into the future.
+                    movement to remain alive and healthy into the future.
                 </p>
             </div>
 
@@ -75,7 +75,8 @@
                     will be use to supply liquidity to the 
                     uniswap $WGMI-Eth trading pair. Uniswap gives the liquidity provider 
                     trading pair liquidity tokens, which can be used later by the provider to redeem
-                    the depositied liquidity. The $WGMI community will burn these trading pair
+                    the depositied liquidity. A multi-signature wallet controlled by $WGMI community leaders 
+                    purchases $WGMI tokens, provides liquidity on Uniswap and burns the
                     liquidity tokens so that the liquidity share is unretrievable forever.
                     <br>
                     <br>
@@ -85,7 +86,7 @@
             </div>
 
             <div>
-                <h1>Mint Details</h1>
+                <h1>Minting</h1>
                 <p>
                     Each mint costs .06 eth and minters are limited to 3 nfts per wallet.
                     Liquidity pool providers' addresses will be added to a whitelist, and
@@ -102,10 +103,10 @@
 
         {# Gallery #}
         <div class="row gallery">
-            <img src="images/tokens/11.png">
-            <img src="images/tokens/12.png">
-            <img src="images/tokens/13.png">
-            <img src="images/tokens/10.png">
+            <img src="images/tokens/420.jpg">
+            <img src="images/tokens/69.jpg">
+            <img src="images/tokens/678.jpg">
+            <img src="images/tokens/888.jpg">
         </div>
 
     </div>
