--- a/src/_modules/header.html
+++ b/src/_modules/header.html
@@ -1,6 +1,6 @@
 <div class="header-wrapper">
     <header>
-        <div class="logo">$WGMI NFT</div>
+        <div class="logo">THE UNRUGGABLES</div>
         <nav>
             <a href="https://twitter.com/wgmi4thepeople" rel="noopener" target="_blank" class="icon twitter"></a>
             <a href="https://testnets.opensea.io/collection/unruggable-pheonix" rel="noopener" target="_blank" class="icon opensea"></a>
