modify banner colors

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 
-{% block meta_title %}$WGMI Unruggables NFT Collection{% endblock %}
+{% block meta_title %}$WGMI NFT{% endblock %}
 
 {% block content %}
     <div class="hero">
@@ -74,7 +74,8 @@
                     All proceeds from initial sales and royalties from secondary sales 
                     will be use to supply liquidity to the 
                     uniswap $WGMI-Eth trading pair. Uniswap gives the liquidity provider 
-                    trading pair liquidity tokens, which can be used later by the provider to redeem
+                    trading pair liquidity
+                     tokens, which can be used later by the provider to redeem
                     the depositied liquidity. A multi-signature wallet controlled by $WGMI community leaders 
                     purchases $WGMI tokens, provides liquidity on Uniswap and burns the
                     liquidity tokens so that the liquidity share is unretrievable forever.
