--- a/src/_base.html
+++ b/src/_base.html
@@ -19,7 +19,7 @@
         <footer>
             <div class="row">
                 <div>$WGMI</div>
-                <div>Website and smart contract development by John Rambo, @AlliedToasters, and the $WGMI Community.</div>
+                <div>Website and smart contract development by John Rambo, toastgmi.eth, and the $WGMI Community.</div>
             </div>
         </footer>
 
