--- a/src/index.html
+++ b/src/index.html
@@ -58,12 +58,12 @@
             <div>
                 <h1>Collection</h1>
                 <p>
-                    The number 888 is sacred to the <a href="https://www.wgmi-takeover.com/">$WGMI community</a>. This collection was conceived 
+                    The number 888 is sacred to the <a href="https://www.wgmi-takeover.com/">$WGMI community</a>. This collection was conceived
                     and created when the community takeover was still very young, so the creator and community decided to use this special number
                     and keep supply low.
                     <br>
                     <br>
-                    Providing permanently locked-in liquidity will enable the community-lead $WGMI 
+                    Providing permanently locked-in liquidity will enable the community-lead $WGMI
                     movement to remain alive and healthy into the future.
                 </p>
             </div>
@@ -71,12 +71,11 @@
             <div>
                 <h1>Proceeds</h1>
                 <p>
-                    All proceeds from initial sales and royalties from secondary sales 
-                    will be use to supply liquidity to the 
-                    uniswap $WGMI-Eth trading pair. Uniswap gives the liquidity provider 
-                    trading pair liquidity
-                     tokens, which can be used later by the provider to redeem
-                    the depositied liquidity. A multi-signature wallet controlled by $WGMI community leaders 
+                    All proceeds from initial sales and royalties from secondary sales
+                    will be use to supply liquidity to the
+                    uniswap $WGMI-Eth trading pair. Uniswap gives the liquidity provider
+                    trading pair liquidity tokens, which can be used later by the provider to redeem
+                    the depositied liquidity. A multi-signature wallet controlled by $WGMI community leaders
                     purchases $WGMI tokens, provides liquidity on Uniswap and burns the
                     liquidity tokens so that the liquidity share is unretrievable forever.
                     <br>
