Attemp to fix image aspect ratio bug reported on iPad

--- a/src/index.html
+++ b/src/index.html
@@ -103,10 +103,10 @@
 
         {# Gallery #}
         <div class="row gallery">
-            <img src="images/tokens/420.jpg">
-            <img src="images/tokens/69.jpg">
-            <img src="images/tokens/678.jpg">
-            <img src="images/tokens/888.jpg">
+            <img src="images/tokens/420.jpg" width="688" height="676">
+            <img src="images/tokens/69.jpg" width="688" height="676">
+            <img src="images/tokens/678.jpg" width="688" height="676">
+            <img src="images/tokens/888.jpg" width="688" height="676">
         </div>
 
     </div>
