--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                         <div id="mint-quantity-value">1</div>
                         <input type="range" min="1" max="3" value="1" name="mint-quantity-input" id="mint-quantity-input">
                     </div>
-                    <div class="mint-help">Max 3 per address. 0.06 ETH per mint. 0.03 ETH per mint for whitelisters!</div>
+                    <div class="mint-help">Max 3 per address. 0.06 ETH per mint.</div>
                 </form>
             </div>
         </div>
@@ -73,9 +73,9 @@
                 <p>
                     All proceeds from initial sales and royalties from secondary sales
                     will be use to supply liquidity to the
-                    uniswap $WGMI-Eth trading pair. Uniswap gives the liquidity provider
+                    uniswap $WGMI-ETH trading pair. Uniswap gives the liquidity provider
                     trading pair liquidity tokens, which can be used later by the provider to redeem
-                    the depositied liquidity. A multi-signature wallet controlled by $WGMI community leaders
+                    the deposited liquidity. A multi-signature wallet controlled by $WGMI community leaders
                     purchases $WGMI tokens, provides liquidity on Uniswap and burns the
                     liquidity tokens so that the liquidity share is unretrievable forever.
                     <br>
@@ -89,13 +89,12 @@
                 <h1>Minting</h1>
                 <p>
                     Each mint costs .06 eth and minters are limited to 3 nfts per wallet.
-                    Liquidity pool providers' addresses will be added to a whitelist, and
-                    these minters will be able to mint for .03 eth per piece, limited to 3 nfts
-                    per wallet.
+                    Liquidity pool providers' addresses will be added to a whitelist. Whitelisters will be given
+                    access to the presale and will be able to mint their Unruggables before the public sale begins.
                     <br>
                     <br>
                     The creators and not-devs behind this project will mint and set approximately 10
-                    nfts aside as rewards for those who contributed to this project, and as gifts for
+                    tokens aside as rewards for those who contributed to this project, and as gifts for
                     notable GMIs that have helped us move the needle in this movement.
                 </p>
             </div>
