--- a/src/index.html
+++ b/src/index.html
@@ -11,28 +11,6 @@
                 <li>Badge of honor for $WGMI OGs</li>
             </ul>
         </div>
-        <div class="btn-container">
-
-            <div class="row">
-                <button class="btn-small" id="sign-in">
-                    <div>Connect Wallet</div>
-                </button>
-                <br>
-                <button class="btn" id="mint-submit">
-                    <div>MINT</div>
-                    <div class="note">
-                        <span id="token_count"></span>
-                    </div>
-                </button>
-                <form>
-                    <div class="mint-quantity">
-                        <div id="mint-quantity-value">1</div>
-                        <input type="range" min="1" max="3" value="1" name="mint-quantity-input" id="mint-quantity-input">
-                    </div>
-                    <div class="mint-help">Max 3 per address. 0.06 ETH per mint.</div>
-                </form>
-            </div>
-        </div>
     </div>
     <div class="content">
         <div class="row">
@@ -82,6 +60,15 @@
                     <br>
                     As this share of the liquidity pool collects fees, a growing portion of the supply of
                     $WGMI tokens will be locked into this unretrievable pool, making $WGMI effectively deflationary.
+                </p>
+            </div>
+
+            <div>
+                <h1>Governance</h1>
+                <p>
+                    If the $WGMI community decides to use royalties from secondary sales for another purpose, we will 
+                    use snapshot voting with the $WGMI token as our governance token. Voting power is determined by 
+                    how much $WGMI you hold.
                 </p>
             </div>
 
