--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <div class="hero-text">
             <ul>
                 <li>Art by Guille23</li>
-                <li>Supplies liquidity for $WGMI</li>
+                <li>Supply liquidity for $WGMI</li>
                 <li>Badge of honor for $WGMI OGs</li>
             </ul>
         </div>
