--- a/src/index.html
+++ b/src/index.html
@@ -11,28 +11,6 @@
                 <li>Badge of honor for $WGMI OGs</li>
             </ul>
         </div>
-        <div class="btn-container">
-
-            <div class="row">
-                <button class="btn-small" id="sign-in">
-                    <div>Connect Wallet</div>
-                </button>
-                <br>
-                <button class="btn" id="mint-submit">
-                    <div>MINT</div>
-                    <div class="note">
-                        <span id="token_count"></span>
-                    </div>
-                </button>
-                <form>
-                    <div class="mint-quantity">
-                        <div id="mint-quantity-value">1</div>
-                        <input type="range" min="1" max="3" value="1" name="mint-quantity-input" id="mint-quantity-input">
-                    </div>
-                    <div class="mint-help">Max 3 per address. 0.06 ETH per mint.</div>
-                </form>
-            </div>
-        </div>
     </div>
     <div class="content">
         <div class="row">
@@ -42,7 +20,7 @@
                     The Unruggables is the first NFT collection made by the $WGMI (ERC-20) community.
                     <br>
                     <br>
-                    The collection consists of 888 unique Unruggable pheonixes, which represent how we, as a community, rose from the ashes after the token was initially rugged by its creator.
+                    The collection consists of 888 unique Unruggable phoenixes, which represent how we, as a community, rose from the ashes after the token was initially rugged by its creator.
                     <br>
                     <br>
                     All royalties from secondary sales of NFTs in this collection will be directed towards supplying liquidity for the $WGMI token, via purchasing ETH/WGMI LP tokens and locking that liquidity away forever by burning those LP tokens.
@@ -123,4 +101,5 @@
             rangeSlide(this.value)
         });
     </script>
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@300&family=VT323&display=swap" rel="stylesheet">
 {% endblock %}
