--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,15 @@
             </div>
 
             <div>
+                <h1>Governance</h1>
+                <p>
+                    If the $WGMI community decides to use royalties from secondary sales for another purpose, we will 
+                    use snapshot voting with the $WGMI token as our governance token. Voting power is determined by 
+                    how much $WGMI you hold.
+                </p>
+            </div>
+
+            <div>
                 <h1>Minting</h1>
                 <p>
                     Each mint costs .06 eth and minters are limited to 3 nfts per wallet.
