--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             <div>
                 <h1>Minting</h1>
                 <p>
-                    Each mint costs .06 eth and minters are limited to 3 nfts per wallet.
+                    Each mint costs .06 eth and we are still working to find the best number of mints per wallet to use.
                     Liquidity pool providers' addresses will be added to a whitelist. Whitelisters will be given
                     access to the presale and will be able to mint their Unruggables before the public sale begins.
                     <br>
