tweaks for mobile display

--- a/src/index.html
+++ b/src/index.html
@@ -111,4 +111,13 @@
         });
     </script>
 <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@300&family=VT323&display=swap" rel="stylesheet">
+<style>
+    @media only screen and (max-width: 1360px) {
+.hero {
+  height:auto;
+  min-height:350px;
+  max-height: inherit;
+    }
+ }
+</style>
 {% endblock %}
