update opensea link

--- a/src/_modules/header.html
+++ b/src/_modules/header.html
@@ -3,7 +3,7 @@
         <div class="logo">THE UNRUGGABLES</div>
         <nav>
             <a href="https://twitter.com/wgmi4thepeople" rel="noopener" target="_blank" class="icon twitter"></a>
-            <a href="https://testnets.opensea.io/collection/unruggable-pheonix" rel="noopener" target="_blank" class="icon opensea"></a>
+            <a href="https://opensea.io/collection/wgmi-unruggables" rel="noopener" target="_blank" class="icon opensea"></a>
             <a href="https://discord.gg/XGJD5FmX6u" rel="noopener" target="_blank" class="icon discord"></a>
             <a href="https://etherscan.io/token/0x20f6a313cb250062331fe70b9567e3ee5f01888b" rel="noopener" target="_blank" class="icon etherscan"></a>
         </nav>
