update links - new community website, contract on etherscan

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <div>
                 <h1>Collection</h1>
                 <p>
-                    The number 888 is sacred to the <a href="https://www.wgmi-takeover.com/">$WGMI community</a>. This collection was conceived
+                    The number 888 is sacred to the <a href="https://www.wgmicoin.com/">$WGMI community</a>. This collection was conceived
                     and created when the community takeover was still very young, so the creator and community decided to use this special number
                     and keep supply low.
                     <br>
@@ -97,12 +97,10 @@
             <div>
                 <h1>Minting</h1>
                 <p>
-                    Each mint costs .06 eth and we are still working to find the best number of mints per wallet to use.
-                    Liquidity pool providers' addresses will be added to a whitelist. Whitelisters will be given
-                    access to the presale and will be able to mint their Unruggables before the public sale begins.
+                    Each mint costs .06 eth.
                     <br>
                     <br>
-                    The creators and not-devs behind this project will mint and set approximately 10
+                    The creators and not-devs behind this project will mint and set approximately 30
                     tokens aside as rewards for those who contributed to this project, and as gifts for
                     notable GMIs that have helped us move the needle in this movement.
                 </p>
